Fix of index in on(click, )

--- a/hw3/hw3/hw3/index.html
+++ b/hw3/hw3/hw3/index.html
@@ -25,7 +25,7 @@
 </header>
 
 <div id="details" class="view">
-    <h2 id="edition">World Cup Title</h2>
+    <h2 id="edition"> </h2>
     <h3>Host</h3>
     <span id="host"></span>
     <h3>Winner</h3>
@@ -74,6 +74,6 @@
     </svg>
 </div>
 
-<script type="application/javascript" src="script.js?version=1"></script>
+<script type="application/javascript" src="script.js"></script>
 </body>
 </html>
