--- a/hw3/hw3/hw3/index.html
+++ b/hw3/hw3/hw3/index.html
@@ -25,7 +25,7 @@
 </header>
 
 <div id="details" class="view">
-    <h2 id="edition"> </h2>
+    <h2 id="edition">World Cup Title </h2>
     <h3>Host</h3>
     <span id="host"></span>
     <h3>Winner</h3>
@@ -68,7 +68,7 @@
         <text x="270" y="18">Runner-Up</text>
     </svg>
 
-    <svg width="900" height="600">
+    <svg width="500" height="400" id="map">
         <g id="map"></g>
         <g id="points"></g>
     </svg>
