--- a/hw3/hw3/hw3/index.html
+++ b/hw3/hw3/hw3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Visualization - Homework 3</title>
-    <link rel="stylesheet" href="styles.css?version=1">
+    <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="d3/d3-selection-multi.js"></script>
     <script type="text/javascript" src="d3/topojson.js"></script>
@@ -58,9 +58,9 @@
 <div id="map-view" class="view">
     <h2>World Map</h2>
     <svg width="400" height="30">
-        <rect class="host legend-element" x="0" y="5" width="1" height="1"></rect>
+        <circle class="host legend-element" cx="8" cy="12" r="8"></circle>
         <text x="18" y="18">Host</text>
-        <rect class="team legend-element" x="60" y="5" width="100" height="100"></rect>
+        <circle class="team legend-element" cx="67" cy="12" r="8" ></circle>
         <text x="78" y="18">Participant</text>
         <circle class="gold" cx="176" cy="12" r="8"></circle>
         <text x="188" y="18">Winner</text>
