--- a/hw3/hw3/hw3/index.html
+++ b/hw3/hw3/hw3/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Visualization - Homework 3</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="bootstrap/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css">
+    <script src="bootstrap/bootstrap-5.0.0-beta1-dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="d3/d3-selection-multi.js"></script>
     <script type="text/javascript" src="d3/topojson.js"></script>
