Final World Cup Vis

--- a/hw3/hw3/hw3/index.html
+++ b/hw3/hw3/hw3/index.html
@@ -22,8 +22,9 @@
 <header>
     <img src="assets/fifa_russia_logo.png" alt="Fifa WC Russia Logo" id="logo"/>
     <h1>Homework 3: FIFA World Cup Statistics</h1>
-    <div>Name: &lt;yourname&gt;</div>
-    <div>E-Mail: &lt;you@whatever&gt</div>
+    <div>Name: &lt;Moses Mbabaali &gt;</div>
+    <div>E-Mail: &lt; mosejava@gmail.com &gt;</div>
+    <div>Matricola: &lt;4846019 &gt; </div>
 </header>
 
 <div id="details" class="view">
